compiler/stage0/tests/snapshots/program__tests_fixtures_programs_basic_compiler_like_token_classifier.snap
---
source: tests/fixtures.rs
assertion_line: 1232
expression: transcript
---
fixture: tests/fixtures/programs/basic/compiler_like_token_classifier.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
1
1
2
1
stderr:
<empty>
