compiler/stage0/tests/snapshots/program__tests_fixtures_programs_basic_compiler_like_tokenizer_parser_pipeline.snap
---
source: tests/fixtures.rs
assertion_line: 5417
expression: transcript
---
fixture: tests/fixtures/programs/basic/compiler_like_tokenizer_parser_pipeline.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
14
1
1
1
1
0
1
stderr:
<empty>
