compiler/stage0/tests/snapshots/program__tests_fixtures_programs_basic_compiler_like_unknown_fallback_boundaries.snap
---
source: tests/fixtures.rs
assertion_line: 4697
expression: transcript
---
fixture: tests/fixtures/programs/basic/compiler_like_unknown_fallback_boundaries.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
unknown path:conservative;unknown call callee:conservative apply;empty list element:conservative;missing tuple item:conservative;missing record field:conservative;unknown match pattern:conservative;incompatible if branches:conservative result;incompatible match arms:conservative result;receive binder:conservative;fallback call signature:conservative;local binding facts:concrete without expression facts;operator facts:concrete without expression facts;aggregate literal facts:concrete without expression facts;constructor facts:concrete without expression facts;imported aggregate facts:concrete without expression facts;imported constructor facts:concrete without expression facts;named signature facts:concrete without expression facts;imported signature facts:concrete without expression facts;external signature facts:concrete without expression facts;function annotation facts:concrete without expression facts;lambda annotation facts:concrete without expression facts;let annotation facts:concrete without expression facts;receive pattern shape facts:concrete without message facts;apply expression result:needs inference facts;lambda expression value:needs arrow facts;unannotated lambda param:conservative;spawn without receive shape:conservative actor id;partial receive wrapper:merge nested facts
stderr:
<empty>
