compiler/stage0/tests/snapshots/program__tests_fixtures_programs_basic_compiler_like_while_lowering_plan.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/basic/compiler_like_while_lowering_plan.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
4
1
1
1
2
1
1
2
stderr:
<empty>
