compiler/stage0/tests/snapshots/program__tests_fixtures_programs_basic_escaped_char_literal.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/basic/escaped_char_literal.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
quote char
stderr:
<empty>
