compiler/stage0/tests/snapshots/program__tests_fixtures_programs_basic_escaped_string.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/basic/escaped_string.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
hello
world
stderr:
<empty>
