compiler/stage0/tests/snapshots/program__tests_fixtures_programs_basic_escaped_string_literal.snap
---
source: tests/fixtures.rs
assertion_line: 5793
expression: transcript
---
fixture: tests/fixtures/programs/basic/escaped_string_literal.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
quote: "
stderr:
<empty>
