compiler/stage0/tests/snapshots/program__tests_fixtures_programs_basic_external_boxed_string_arg.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/basic/external_boxed_string_arg.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
5
stderr:
<empty>
