compiler/stage0/tests/snapshots/program__tests_fixtures_programs_basic_external_println.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/basic/external_println.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
hello from external
stderr:
<empty>
