compiler/stage0/tests/snapshots/program__tests_fixtures_programs_basic_function_partial_application.snap
---
source: tests/fixtures.rs
assertion_line: 729
expression: transcript
---
fixture: tests/fixtures/programs/basic/function_partial_application.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
42
stderr:
<empty>
